--- a/package.xml
+++ b/package.xml
@@ -1,20 +1,20 @@
 <package>
- <name>ras_group8_template</name>
+ <name>ras_group8_map</name>
   <version>0.1.0</version>
   <description>
-    Template package.
+    Map package.
   </description>
   <license>BSD</license>
 
-  <url type="website">https://github.com/RAS17-Group-8/ras_group8_template</url>
+  <url type="website">https://github.com/RAS17-Group-8/ras_group8_map</url>
 
   <maintainer email="seb.lindberg@gmail.com">Sebastian Lindberg</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roscpp</build_depend>
-  <build_depend>phidgets</build_depend>
+  <build_depend>nav_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
-  <run_depend>phidgets</run_depend>
+  <run_depend>nav_msgs</run_depend>
 </package>
