--- a/package.xml
+++ b/package.xml
@@ -14,7 +14,9 @@
 
   <build_depend>roscpp</build_depend>
   <build_depend>nav_msgs</build_depend>
+  <build_depend>ras_group8_util</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>nav_msgs</run_depend>
+  <run_depend>ras_group8_util</run_depend>
 </package>
